--- a/savis4/src/app/problems/problems.component.scss
+++ b/savis4/src/app/problems/problems.component.scss
@@ -3,7 +3,7 @@
 
 .problems-container {
   min-height: 100vh;
-  padding: 40px;
+  padding: 20px;
   background-color: var(--fifth-col);
 
   .title {
@@ -13,10 +13,10 @@
   }
 
   .content {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
-    gap: 40px;
 
     .text-section {
       flex: 0.6;
@@ -49,6 +49,8 @@ h1{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    width: 100%;
+    max-width: none;
 }
 
 /* Styling for each column */
